--- a/inventories/group_vars/ocp4/api_certs.yml
+++ b/inventories/group_vars/ocp4/api_certs.yml
@@ -4,3 +4,4 @@ ocp_api_cert_file: files/api.ocp4.lab.shakey.org.crt
 ocp_api_key_file: files/api.ocp4.lab.shakey.org.key
 ocp_router_certs_file: files/apps.ocp4.lab.shakey.org.crt
 ocp_router_key_file: files/apps.ocp4.lab.shakey.org.key
+ocp_api_fqdn: api.ocp4.lab.shakey.org
