--- a/playbook_configure_certs.yml
+++ b/playbook_configure_certs.yml
@@ -1,12 +1,21 @@
+---
+
+# Notes
+# 1. It's assumed that at this point the API cert is signed by the cluster internal CA,
+#    so validate_certs is defaulted to false.  If renewing certs (and you care)
+#    explicitly set ocp_api_validate_certs: true, and the ca_cert location.
+# 2. It's assumed that at this point, there is no authentication configured so we
+#    use the KUBECONFIG environment variable.  If authentication is configured, the api_key
+#    could be used as per the other playbooks.
+
 - name: setup ocp certs
   hosts: all
   gather_facts: false
   module_defaults:
     group/k8s:
       state: 'present'
-      host: "{{ api_url | default(omit) }}"
-      api_key: "{{ api_key | default(omit) }}"
-      validate_certs: false
+      validate_certs: "{{ ocp_api_validate_certs | default('false') }}"
+      ca_cert: "{{ ocp_api_root_cert_file | default('omit') }}"
 
   tasks:
 
