--- a/playbook_configure_ldap.yml
+++ b/playbook_configure_ldap.yml
@@ -1,15 +1,26 @@
-- name: setup ocp certs
+---
+
+# Notes
+# 1. It's assumed that at this point the API cert has been signed by a trusted CA,
+#    so validate_certs is defaulted to true.  If using the cluster internal ca certs
+#    explicitly set ocp_api_validate_certs: false, and do not define ca_cert location.
+# 2. It's assumed that at this point, there is no authentication configured so we
+#    use the kube config via the KUBECONFIG environment variable.  If authentication is
+#    configured, the api_key could be used as per the other playbooks.
+
+- name: setup ldap authentication
   hosts: all
   gather_facts: false
   module_defaults:
     group/k8s:
       state: 'present'
-      host: "{{ api_url | default(omit) }}"
-      api_key: "{{ api_key | default(omit) }}"
-      validate_certs: false
+      validate_certs: "{{ ocp_api_validate_certs | default('true') }}"
+      ca_cert: "{{ ocp_api_root_cert_file | default('omit') }}"
 
   tasks:
 
-    - include_role:
+    - name: configure ldap for ocp
+      include_role:
         name: ocp-ldap
       tags: ldap
+
