--- a/playbook_configure_projects.yml
+++ b/playbook_configure_projects.yml
@@ -1,4 +1,4 @@
-- name: setup ocp console setting
+- name: setup ocp project setting
   hosts: all
   gather_facts: false
   module_defaults:
@@ -26,9 +26,12 @@
           set_fact:
             api_key: "{{ ocp_auth_results.openshift_auth.api_key }}"
 
-        - name: include the ocp-console role
+        - name: run the project role for each defined project
           include_role:
-            name: ocp-console
+            name: ocp-project
+          loop: "{{ ocp_projects }}"
+          loop_control:
+            loop_var: ocp_project
 
       always:
 
@@ -40,3 +43,4 @@
             validate_certs: "{{ ocp_api_validate_certs | default('true') }}"
             ca_cert: "{{ ocp_api_root_cert_file | default('omit') }}"
           when: ocp_auth_results.openshift_auth.api_key is defined
+
